[gd_scene load_steps=4 format=3 uid="uid://cb22vbour2ppi"]

[ext_resource type="Texture2D" uid="uid://c4ydj2imcmiky" path="res://art/building_sprite_visual.png" id="1_47hct"]
[ext_resource type="Script" path="res://scripts/building_visual.gd" id="1_640ws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_antdm"]
size = Vector2(84.5, 81.5)

[node name="BuildingVisual" type="Area2D"]
position = Vector2(415, 158)
script = ExtResource("1_640ws")

[node name="PlayerRange" type="Polygon2D" parent="."]
position = Vector2(-33, -26)
scale = Vector2(0.540737, 0.540737)
color = Color(0, 1, 1, 0.321569)
polygon = PackedVector2Array(69.6245, -229.444, 128.172, -223.115, 202.544, -199.379, 262.674, -158.238, 321.222, -80.7011, 352.87, 15.8238, 348.123, 113.931, 303.816, 205.709, 243.686, 278.498, 170.897, 314.893, 91.7778, 332.299, 1.5824, 327.552, -82.2835, 294.322, -129.755, 257.927, -178.808, 199.379, -208.874, 125.008, -219.95, 60.1302, -204.126, -20.5709, -172.479, -88.613, -137.667, -148.743, -79.1188, -185.138, -12.659, -221.533)

[node name="BuildingVisualCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 0.75)
shape = SubResource("RectangleShape2D_antdm")

[node name="BuildingVisualSprite" type="Sprite2D" parent="."]
scale = Vector2(0.656, 0.656)
texture = ExtResource("1_47hct")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
